fix | datepicker - css change - gap-x removed from day cells

--- a/src/components/ui/inputs/datepicker/datepicker.style.scss
+++ b/src/components/ui/inputs/datepicker/datepicker.style.scss
@@ -65,10 +65,10 @@
         }
         
         .ea-datepicker__calendar {
-            @apply grid grid-cols-7 gap-1;
+            @apply grid grid-cols-7 gap-y-1;
             
             .ea-datepicker__day {
-                @apply h-8 w-8 flex items-center justify-center rounded-full text-sm cursor-pointer;
+                @apply h-8 w-full flex items-center justify-center rounded-full text-sm cursor-pointer;
                 
                 &:not(.disabled) {
                     @apply text-textPrimary hover:bg-bgSecondary;
